objects/tffa__Disclosure__c.object
<CustomObject>
    <description>Supports the capture of a list of disclosures which the applicant has to accept or execute before opening the account. List of disclosures is fetched from disclosure checklist maintained for a product and type of applicant.</description>
    <fields>
        <fullName>CZAddendumsAttached__c</fullName>
        <description>Addendums Attached</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Addendums Attached</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZDisclosureParticipantCount__c</fullName>
        <description>Disclosure Participant Count</description>
        <label>Disclosure Participant Count</label>
        <summaryForeignKey>tffa__DisclosureParticipant__c.tffa__Disclosure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CZDisclosureSet__c</fullName>
        <description>Disclosure Set</description>
        <label>Disclosure Set</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZParentDisclosureCode__c</fullName>
        <description>Parent Disclosure Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Disclosure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZRelatedApplication__c</fullName>
        <description>Applications Linked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Applications Linked</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__AcceptedOn__c</fullName>
        <description>Date and time on which disclosure was accepted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accepted on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this disclosure has been accepted by the propsect or customer.</description>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AccountPreference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to parent Account preference if current disclosure is accepted against any account preference.</description>
        <label>Account Preference</label>
        <referenceTo>tffa__AccountPreference__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ActionText__c</fullName>
        <description>The text in a disclosure link.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the record is available for consumption. Derived from disabled. If the record was soft deleted (or disabled) this will be false. Such records are generally skipped from query results.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AdditionalPreference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to parent Additional Preference if current disclosure is accepted against any Additional preference selected by the applicant.</description>
        <label>Additional Preference</label>
        <referenceTo>tffa__AdditionalPreference__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ApplicantRoleSet__c</fullName>
        <description>Roles (any one) that a party must have to be eligible for the disclosure</description>
        <label>Applicant role (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique identifier for the disclosure.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CorsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the cors is enabled at the external url.</description>
        <inlineHelpText>Applicable to External url. ensure CORS policy allows  site url</inlineHelpText>
        <label>CORS Enabled ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceBrowser__c</fullName>
        <description>The browser of the client from which disclosure is accepted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocation__c</fullName>
        <description>Specifies the precise geolocation of the device. A device&apos;s IP can be used to derive this value within some degree of confidence.</description>
        <label>Device Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOS__c</fullName>
        <description>The OS of the client from which disclosure was accepted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device os</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOrientation__c</fullName>
        <description>Orientation of the device captured while signing the disclosure</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device orientation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DevicePixelRatio__c</fullName>
        <description>Pixel ratio of the device from which disclosure is signed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device pixel ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Device__c</fullName>
        <description>Identifier of the device from which disclosure is accepted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes the disclosure unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DocumentName__c</fullName>
        <description>Name of the document as identified in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DocumentUrl__c</fullName>
        <description>Link to the document displayed as part of the disclosure.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ElectronicSignatureProvider__c</fullName>
        <description>Captures the name of the Electronic signature provider</description>
        <label>Electronic signature provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ElectronicSignatureProvider</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EntityType__c</fullName>
        <description>Type of entity e.g. PARTY, APPLICATION</description>
        <label>Entity type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EntityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EnvelopeId__c</fullName>
        <description>Unique identifier for the docusign document envelope.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Envelope Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Envelope__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to Disclosure Envelope.</description>
        <label>Envelope</label>
        <referenceTo>tffa__DisclosureEnvelope__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__EventName__c</fullName>
        <description>Event or purpose of capture of Disclosure</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExecutionRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether digital signature is required</description>
        <label>Execution required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalDocumentId__c</fullName>
        <description>Document id as referred by external document generation system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ExternalReferenceId__c</fullName>
        <description>The reference ID of the external system which hosts the disclosure. In case of Docsign this could be the unique id of the docusign document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External reference id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Financial Need if current disclosure was accepted during Financial Need capture.</description>
        <label>Financial Need</label>
        <referenceTo>tffa__FinancialNeed__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__FundingRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to parent funding request if current disclosure is accepted against any funding request.</description>
        <label>Funding Request</label>
        <referenceTo>tffa__FundingRequest__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__GroupCode__c</fullName>
        <description>Unique group code to determine grouped disclosure items within a checklist</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IpAddress__c</fullName>
        <description>IP address of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ip address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the current disclosure is resolved and generated by external system</description>
        <label>Is External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRemoteCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if current disclosure request is captured remotely</description>
        <label>Is remote captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>The disclosure text.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LinkedApplication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to application.</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>LinkedDisclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Locale__c</fullName>
        <description>Captures language for the current disclosure</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__LongLabel__c</fullName>
        <description>The disclosure text in case it spans over 255 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Long label</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ParentTemplate__c</fullName>
        <description>Reference to the parent template under which current disclosure is based upon. External document generation providers generate the documents based on a schema/package, which governs the list of applicable documents for disclosure. This field can be used to capture the
        reference to the schema/package.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to related party.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessId__c</fullName>
        <description>A unique identifier of the process generating data for the disclosures</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessState__c</fullName>
        <description>The state associated with pulling (or processing) the disclosures from the external system. Typically seen in asynchronous systems.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessViewerURL__c</fullName>
        <description>The viewer URL associated with pulling (or processing) the disclosures from the external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a mandatory or optional disclosure.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source or the context of the disclosure. All the disclosures are presented towards the review/confirmation of the submission. In some case the disclosure may appear inside data entry fields as well.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Indicates the current status of disclosure resolved for the applicant.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DisclosureStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to parent submission.</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__TemplateLabel__c</fullName>
        <description>The disclosure template text for original text</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Template label</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__Template__c</fullName>
        <description>The docusign template id.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Captures type of the disclosure. Possible values are Text, External Url, Docusign etc.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DisclosureType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UserAgent__c</fullName>
        <description>User agent of the device used while signing the disclosure.In computing, a user agent is software (a software agent) that is acting on behalf of a user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Disclosure</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclosure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>